# SimpleLogger

./: .gitignore  LICENSE  README.md  USAGE.md
.github/: README.md  copilot-instructions.md
.github/workflows/: cmake.yml
logger_lib/: CMakeLists.txt  README.md
logger_lib/cmake/: logger_lib_config.cmake.in
logger_lib/include/: logger.hpp
logger_lib/src/: logger.cpp
